// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fields are loaded 1`] = `
[
  "[literalField CollectionObject.actualTotalCountAmt]",
  "[literalField CollectionObject.age]",
  "[literalField CollectionObject.availability]",
  "[literalField CollectionObject.catalogNumber]",
  "[literalField CollectionObject.catalogedDate]",
  "[literalField CollectionObject.catalogedDatePrecision]",
  "[literalField CollectionObject.catalogedDateVerbatim]",
  "[literalField CollectionObject.collectionMemberId]",
  "[literalField CollectionObject.countAmt]",
  "[literalField CollectionObject.reservedText]",
  "[literalField CollectionObject.timestampModified]",
  "[literalField CollectionObject.date1]",
  "[literalField CollectionObject.date1Precision]",
  "[literalField CollectionObject.deaccessioned]",
  "[literalField CollectionObject.embargoReason]",
  "[literalField CollectionObject.embargoReleaseDate]",
  "[literalField CollectionObject.embargoReleaseDatePrecision]",
  "[literalField CollectionObject.embargoStartDate]",
  "[literalField CollectionObject.embargoStartDatePrecision]",
  "[literalField CollectionObject.guid]",
  "[literalField CollectionObject.integer1]",
  "[literalField CollectionObject.integer2]",
  "[literalField CollectionObject.text2]",
  "[literalField CollectionObject.inventoryDate]",
  "[literalField CollectionObject.inventoryDatePrecision]",
  "[literalField CollectionObject.modifier]",
  "[literalField CollectionObject.name]",
  "[literalField CollectionObject.notifications]",
  "[literalField CollectionObject.numberOfDuplicates]",
  "[literalField CollectionObject.number1]",
  "[literalField CollectionObject.number2]",
  "[literalField CollectionObject.objectCondition]",
  "[literalField CollectionObject.ocr]",
  "[literalField CollectionObject.text1]",
  "[literalField CollectionObject.altCatalogNumber]",
  "[literalField CollectionObject.projectNumber]",
  "[literalField CollectionObject.remarks]",
  "[literalField CollectionObject.reservedInteger3]",
  "[literalField CollectionObject.reservedInteger4]",
  "[literalField CollectionObject.reservedText2]",
  "[literalField CollectionObject.reservedText3]",
  "[literalField CollectionObject.restrictions]",
  "[literalField CollectionObject.sgrStatus]",
  "[literalField CollectionObject.description]",
  "[literalField CollectionObject.text3]",
  "[literalField CollectionObject.text4]",
  "[literalField CollectionObject.text5]",
  "[literalField CollectionObject.text6]",
  "[literalField CollectionObject.text7]",
  "[literalField CollectionObject.text8]",
  "[literalField CollectionObject.timestampCreated]",
  "[literalField CollectionObject.totalCountAmt]",
  "[literalField CollectionObject.totalValue]",
  "[literalField CollectionObject.uniqueIdentifier]",
  "[literalField CollectionObject.version]",
  "[literalField CollectionObject.visibility]",
  "[literalField CollectionObject.fieldNumber]",
  "[literalField CollectionObject.yesNo1]",
  "[literalField CollectionObject.yesNo2]",
  "[literalField CollectionObject.yesNo3]",
  "[literalField CollectionObject.yesNo4]",
  "[literalField CollectionObject.yesNo5]",
  "[literalField CollectionObject.yesNo6]",
  "[relationship CollectionObject.accession]",
  "[relationship CollectionObject.agent1]",
  "[relationship CollectionObject.appraisal]",
  "[relationship CollectionObject.cataloger]",
  "[relationship CollectionObject.cojo]",
  "[relationship CollectionObject.collectionObjectAttribute]",
  "[relationship CollectionObject.collection]",
  "[relationship CollectionObject.collectionObjectAttachments]",
  "[relationship CollectionObject.collectionObjectAttrs]",
  "[relationship CollectionObject.collectionObjectCitations]",
  "[relationship CollectionObject.collectionObjectProperties]",
  "[relationship CollectionObject.collectionObjectType]",
  "[relationship CollectionObject.conservDescriptions]",
  "[relationship CollectionObject.container]",
  "[relationship CollectionObject.containerOwner]",
  "[relationship CollectionObject.createdByAgent]",
  "[relationship CollectionObject.currentDetermination]",
  "[relationship CollectionObject.determinations]",
  "[relationship CollectionObject.dnaSequences]",
  "[relationship CollectionObject.modifiedByAgent]",
  "[relationship CollectionObject.embargoAuthority]",
  "[relationship CollectionObject.exsiccataItems]",
  "[relationship CollectionObject.collectingEvent]",
  "[relationship CollectionObject.fieldNotebookPage]",
  "[relationship CollectionObject.inventorizedBy]",
  "[relationship CollectionObject.leftSideRels]",
  "[relationship CollectionObject.otherIdentifiers]",
  "[relationship CollectionObject.paleoContext]",
  "[relationship CollectionObject.preparations]",
  "[relationship CollectionObject.projects]",
  "[relationship CollectionObject.rightSideRels]",
  "[relationship CollectionObject.treatmentEvents]",
  "[relationship CollectionObject.visibilitySetBy]",
  "[relationship CollectionObject.voucherRelationships]",
]
`;

exports[`literal fields are loaded 1`] = `
[
  "[literalField CollectionObject.actualTotalCountAmt]",
  "[literalField CollectionObject.age]",
  "[literalField CollectionObject.availability]",
  "[literalField CollectionObject.catalogNumber]",
  "[literalField CollectionObject.catalogedDate]",
  "[literalField CollectionObject.catalogedDatePrecision]",
  "[literalField CollectionObject.catalogedDateVerbatim]",
  "[literalField CollectionObject.collectionMemberId]",
  "[literalField CollectionObject.countAmt]",
  "[literalField CollectionObject.reservedText]",
  "[literalField CollectionObject.timestampModified]",
  "[literalField CollectionObject.date1]",
  "[literalField CollectionObject.date1Precision]",
  "[literalField CollectionObject.deaccessioned]",
  "[literalField CollectionObject.embargoReason]",
  "[literalField CollectionObject.embargoReleaseDate]",
  "[literalField CollectionObject.embargoReleaseDatePrecision]",
  "[literalField CollectionObject.embargoStartDate]",
  "[literalField CollectionObject.embargoStartDatePrecision]",
  "[literalField CollectionObject.guid]",
  "[literalField CollectionObject.integer1]",
  "[literalField CollectionObject.integer2]",
  "[literalField CollectionObject.text2]",
  "[literalField CollectionObject.inventoryDate]",
  "[literalField CollectionObject.inventoryDatePrecision]",
  "[literalField CollectionObject.modifier]",
  "[literalField CollectionObject.name]",
  "[literalField CollectionObject.notifications]",
  "[literalField CollectionObject.numberOfDuplicates]",
  "[literalField CollectionObject.number1]",
  "[literalField CollectionObject.number2]",
  "[literalField CollectionObject.objectCondition]",
  "[literalField CollectionObject.ocr]",
  "[literalField CollectionObject.text1]",
  "[literalField CollectionObject.altCatalogNumber]",
  "[literalField CollectionObject.projectNumber]",
  "[literalField CollectionObject.remarks]",
  "[literalField CollectionObject.reservedInteger3]",
  "[literalField CollectionObject.reservedInteger4]",
  "[literalField CollectionObject.reservedText2]",
  "[literalField CollectionObject.reservedText3]",
  "[literalField CollectionObject.restrictions]",
  "[literalField CollectionObject.sgrStatus]",
  "[literalField CollectionObject.description]",
  "[literalField CollectionObject.text3]",
  "[literalField CollectionObject.text4]",
  "[literalField CollectionObject.text5]",
  "[literalField CollectionObject.text6]",
  "[literalField CollectionObject.text7]",
  "[literalField CollectionObject.text8]",
  "[literalField CollectionObject.timestampCreated]",
  "[literalField CollectionObject.totalCountAmt]",
  "[literalField CollectionObject.totalValue]",
  "[literalField CollectionObject.uniqueIdentifier]",
  "[literalField CollectionObject.version]",
  "[literalField CollectionObject.visibility]",
  "[literalField CollectionObject.fieldNumber]",
  "[literalField CollectionObject.yesNo1]",
  "[literalField CollectionObject.yesNo2]",
  "[literalField CollectionObject.yesNo3]",
  "[literalField CollectionObject.yesNo4]",
  "[literalField CollectionObject.yesNo5]",
  "[literalField CollectionObject.yesNo6]",
]
`;

exports[`localization is generated on the fly when empty 1`] = `
{
  "items": {
    "dnasequencingrunattachmentid": {
      "desc": null,
      "format": null,
      "ishidden": true,
      "isrequired": false,
      "name": "ID",
      "picklistname": null,
      "weblinkname": null,
    },
  },
}
`;

exports[`localization is loaded 1`] = `
{
  "aggregator": "CollectionObject",
  "defaultui": null,
  "desc": "A general term for anything that can be a part of your collection: a specimen, a specimen lot, a sound recording, a slide, a tissue, an extract, or a spectrogram.",
  "format": "CollectionObject",
  "ishidden": true,
  "isuiformatter": null,
  "items": {
    "accession": {
      "desc": "Accession",
      "format": null,
      "ishidden": false,
      "isrequired": false,
      "isuiformatter": false,
      "name": "Accession #",
      "picklistname": null,
      "type": "ManyToOne",
      "weblinkname": null,
    },
    "agent1": {
      "desc": "Agent1",
      "format": null,
      "ishidden": true,
      "isrequired": false,
      "isuiformatter": false,
      "name": "Agent1",
      "picklistname": null,
      "type": null,
      "weblinkname": null,
    },
    "altcatalognumber": {
      "desc": "altyay atcay umbernay",
      "format": null,
      "ishidden": false,
      "isrequired": false,
      "isuiformatter": false,
      "name": "Prev/Exch #",
      "picklistname": null,
      "type": null,
      "weblinkname": "MailTo",
    },
    "appraisal": {
      "desc": "Appraisal",
      "format": null,
      "ishidden": true,
      "isrequired": false,
      "isuiformatter": false,
      "name": "Appraisal",
      "picklistname": null,
      "type": null,
      "weblinkname": null,
    },
    "availability": {
      "desc": "availabilityyay",
      "format": null,
      "ishidden": true,
      "isrequired": false,
      "isuiformatter": false,
      "name": "Availability",
      "picklistname": null,
      "type": null,
      "weblinkname": null,
    },
    "catalogeddate": {
      "desc": "Cataloged Date",
      "format": null,
      "ishidden": false,
      "isrequired": false,
      "isuiformatter": false,
      "name": "Cat Date",
      "picklistname": null,
      "type": "java.util.Calendar",
      "weblinkname": null,
    },
    "catalogeddateprecision": {
      "desc": "Cataloged Date Precision",
      "format": null,
      "ishidden": true,
      "isrequired": false,
      "isuiformatter": false,
      "name": "Cataloged Date Precision",
      "picklistname": null,
      "type": null,
      "weblinkname": null,
    },
    "catalogeddateverbatim": {
      "desc": "Cataloged Date Verbatim",
      "format": null,
      "ishidden": true,
      "isrequired": false,
      "isuiformatter": false,
      "name": "Cataloged Date Verbatim",
      "picklistname": null,
      "type": "java.lang.String",
      "weblinkname": null,
    },
    "cataloger": {
      "desc": "Cataloger",
      "format": null,
      "ishidden": false,
      "isrequired": false,
      "isuiformatter": false,
      "name": "Cataloger",
      "picklistname": null,
      "type": "ManyToOne",
      "weblinkname": null,
    },
    "catalognumber": {
      "desc": "atalogcay umbernay",
      "format": "CatalogNumberNumeric",
      "ishidden": false,
      "isrequired": false,
      "isuiformatter": true,
      "name": "Cat #",
      "picklistname": null,
      "type": "java.lang.String",
      "weblinkname": null,
    },
    "collectingevent": {
      "desc": "Collecting Event",
      "format": null,
      "ishidden": false,
      "isrequired": false,
      "isuiformatter": false,
      "name": "Field No: Locality",
      "picklistname": null,
      "type": "ManyToOne",
      "weblinkname": null,
    },
    "collection": {
      "desc": "Collection",
      "format": null,
      "ishidden": false,
      "isrequired": false,
      "isuiformatter": false,
      "name": "Collection",
      "picklistname": null,
      "type": "ManyToOne",
      "weblinkname": null,
    },
    "collectionmemberid": {
      "desc": "Collection Member Id",
      "format": null,
      "ishidden": true,
      "isrequired": true,
      "isuiformatter": false,
      "name": "Collection Member Id",
      "picklistname": null,
      "type": null,
      "weblinkname": null,
    },
    "collectionobjectattachments": {
      "desc": "Collection Object Attachments",
      "format": null,
      "ishidden": false,
      "isrequired": false,
      "isuiformatter": false,
      "name": "Collection Object Attachments",
      "picklistname": null,
      "type": "OneToMany",
      "weblinkname": null,
    },
    "collectionobjectattribute": {
      "desc": "Col Obj Attribute",
      "format": null,
      "ishidden": false,
      "isrequired": false,
      "isuiformatter": false,
      "name": "Col Obj Attribute",
      "picklistname": null,
      "type": "ManyToOne",
      "weblinkname": null,
    },
    "collectionobjectattrs": {
      "desc": "Collection Object Attrs",
      "format": null,
      "ishidden": true,
      "isrequired": false,
      "isuiformatter": false,
      "name": "Collection Object Attrs",
      "picklistname": null,
      "type": "OneToMany",
      "weblinkname": null,
    },
    "collectionobjectcitations": {
      "desc": "Collection Object Citations",
      "format": null,
      "ishidden": false,
      "isrequired": false,
      "isuiformatter": false,
      "name": "Collection Object Citations",
      "picklistname": null,
      "type": "OneToMany",
      "weblinkname": null,
    },
    "collectionobjectid": {
      "desc": null,
      "format": null,
      "ishidden": true,
      "isrequired": false,
      "name": "ID",
      "picklistname": null,
      "weblinkname": null,
    },
    "collectionobjectproperties": {
      "desc": "Collection Object Properties",
      "format": null,
      "ishidden": true,
      "isrequired": false,
      "isuiformatter": false,
      "name": "Collection Object Properties",
      "picklistname": null,
      "type": null,
      "weblinkname": null,
    },
    "conservdescriptions": {
      "desc": "Conserv Descriptions",
      "format": null,
      "ishidden": true,
      "isrequired": false,
      "isuiformatter": false,
      "name": "Conserv Descriptions",
      "picklistname": null,
      "type": "OneToMany",
      "weblinkname": null,
    },
    "container": {
      "desc": "Container",
      "format": null,
      "ishidden": true,
      "isrequired": false,
      "isuiformatter": false,
      "name": "Container",
      "picklistname": null,
      "type": "ManyToOne",
      "weblinkname": null,
    },
    "containerowner": {
      "desc": "Container Owner",
      "format": null,
      "ishidden": true,
      "isrequired": false,
      "isuiformatter": false,
      "name": "Container Owner",
      "picklistname": null,
      "type": "ManyToOne",
      "weblinkname": null,
    },
    "countamt": {
      "desc": "Count Amount",
      "format": null,
      "ishidden": true,
      "isrequired": false,
      "isuiformatter": false,
      "name": "Count Amount",
      "picklistname": null,
      "type": "java.lang.Integer",
      "weblinkname": null,
    },
    "createdbyagent": {
      "desc": "Created By Agent",
      "format": null,
      "ishidden": true,
      "isrequired": false,
      "isuiformatter": false,
      "name": "Created By Agent",
      "picklistname": null,
      "type": null,
      "weblinkname": null,
    },
    "date1": {
      "desc": "Date1",
      "format": null,
      "ishidden": true,
      "isrequired": false,
      "isuiformatter": false,
      "name": "Date1",
      "picklistname": null,
      "type": null,
      "weblinkname": null,
    },
    "date1precision": {
      "desc": "Date1 Precision",
      "format": null,
      "ishidden": true,
      "isrequired": false,
      "isuiformatter": false,
      "name": "Date1 Precision",
      "picklistname": null,
      "type": null,
      "weblinkname": null,
    },
    "deaccessioned": {
      "desc": "Deaccessioned",
      "format": null,
      "ishidden": true,
      "isrequired": false,
      "isuiformatter": false,
      "name": "Deaccessioned",
      "picklistname": null,
      "type": "java.lang.Boolean",
      "weblinkname": null,
    },
    "description": {
      "desc": "Specimen Description",
      "format": null,
      "ishidden": true,
      "isrequired": false,
      "isuiformatter": false,
      "name": "Specimen Description",
      "picklistname": null,
      "type": "java.lang.String",
      "weblinkname": null,
    },
    "determinations": {
      "desc": "Determinations",
      "format": null,
      "ishidden": false,
      "isrequired": false,
      "isuiformatter": false,
      "name": "Determinations",
      "picklistname": null,
      "type": "OneToMany",
      "weblinkname": null,
    },
    "dnasequences": {
      "desc": "DNA Sequences",
      "format": null,
      "ishidden": false,
      "isrequired": false,
      "isuiformatter": false,
      "name": "DNA Sequences",
      "picklistname": null,
      "type": null,
      "weblinkname": null,
    },
    "embargoauthority": {
      "desc": "Embargo Authority",
      "format": null,
      "ishidden": true,
      "isrequired": false,
      "isuiformatter": false,
      "name": "Embargo Authority",
      "picklistname": null,
      "type": null,
      "weblinkname": null,
    },
    "embargoreason": {
      "desc": "Embargo Reason",
      "format": null,
      "ishidden": true,
      "isrequired": false,
      "isuiformatter": false,
      "name": "Embargo Reason",
      "picklistname": null,
      "type": null,
      "weblinkname": null,
    },
    "embargoreleasedate": {
      "desc": "Embargo Release Date",
      "format": null,
      "ishidden": true,
      "isrequired": false,
      "isuiformatter": false,
      "name": "Embargo Release Date",
      "picklistname": null,
      "type": null,
      "weblinkname": null,
    },
    "embargoreleasedateprecision": {
      "desc": "Embargo Release Date Precision",
      "format": null,
      "ishidden": true,
      "isrequired": false,
      "isuiformatter": false,
      "name": "Embargo Release Date Precision",
      "picklistname": null,
      "type": null,
      "weblinkname": null,
    },
    "embargostartdate": {
      "desc": "Embargo Start Date",
      "format": null,
      "ishidden": true,
      "isrequired": false,
      "isuiformatter": false,
      "name": "Embargo Start Date",
      "picklistname": null,
      "type": null,
      "weblinkname": null,
    },
    "embargostartdateprecision": {
      "desc": "Embargo Start Date Precision",
      "format": null,
      "ishidden": true,
      "isrequired": false,
      "isuiformatter": false,
      "name": "Embargo Start Date Precision",
      "picklistname": null,
      "type": null,
      "weblinkname": null,
    },
    "exsiccataitems": {
      "desc": "Exsiccata Items",
      "format": null,
      "ishidden": true,
      "isrequired": false,
      "isuiformatter": false,
      "name": "Exsiccata Items",
      "picklistname": null,
      "type": null,
      "weblinkname": null,
    },
    "fieldnotebookpage": {
      "desc": "Field Notebook Page",
      "format": null,
      "ishidden": true,
      "isrequired": false,
      "isuiformatter": false,
      "name": "Field Notebook Page",
      "picklistname": null,
      "type": null,
      "weblinkname": null,
    },
    "fieldnumber": {
      "desc": "Field Number",
      "format": null,
      "ishidden": false,
      "isrequired": false,
      "isuiformatter": false,
      "name": "Voucher",
      "picklistname": null,
      "type": "java.lang.String",
      "weblinkname": null,
    },
    "guid": {
      "desc": "GUID",
      "format": null,
      "ishidden": false,
      "isrequired": false,
      "isuiformatter": false,
      "name": "GUID",
      "picklistname": null,
      "type": "java.lang.String",
      "weblinkname": null,
    },
    "integer1": {
      "desc": "Integer1",
      "format": null,
      "ishidden": true,
      "isrequired": false,
      "isuiformatter": false,
      "name": "Integer1",
      "picklistname": null,
      "type": null,
      "weblinkname": null,
    },
    "integer2": {
      "desc": "Integer2",
      "format": null,
      "ishidden": true,
      "isrequired": false,
      "isuiformatter": false,
      "name": "Integer2",
      "picklistname": null,
      "type": null,
      "weblinkname": null,
    },
    "inventorizedby": {
      "desc": "Inventoried By",
      "format": null,
      "ishidden": true,
      "isrequired": false,
      "isuiformatter": false,
      "name": "Inventoried By",
      "picklistname": null,
      "type": null,
      "weblinkname": null,
    },
    "inventorydate": {
      "desc": "Inventory Date",
      "format": null,
      "ishidden": true,
      "isrequired": false,
      "isuiformatter": false,
      "name": "Inventory Date",
      "picklistname": null,
      "type": null,
      "weblinkname": null,
    },
    "inventorydateprecision": {
      "desc": "Inventory Date Precision",
      "format": null,
      "ishidden": true,
      "isrequired": false,
      "isuiformatter": false,
      "name": "Inventory Date Precision",
      "picklistname": null,
      "type": null,
      "weblinkname": null,
    },
    "leftsiderels": {
      "desc": "Left Side Rels",
      "format": null,
      "ishidden": false,
      "isrequired": false,
      "isuiformatter": false,
      "name": "Left Side Rels",
      "picklistname": null,
      "type": "OneToMany",
      "weblinkname": null,
    },
    "modifiedbyagent": {
      "desc": "Modified By Agent",
      "format": null,
      "ishidden": false,
      "isrequired": false,
      "isuiformatter": false,
      "name": "Edited By",
      "picklistname": null,
      "type": null,
      "weblinkname": null,
    },
    "modifier": {
      "desc": "Modifier",
      "format": null,
      "ishidden": true,
      "isrequired": false,
      "isuiformatter": false,
      "name": "Modifier",
      "picklistname": null,
      "type": "java.lang.String",
      "weblinkname": null,
    },
    "name": {
      "desc": "Name",
      "format": null,
      "ishidden": true,
      "isrequired": false,
      "isuiformatter": false,
      "name": "Name",
      "picklistname": null,
      "type": "java.lang.String",
      "weblinkname": null,
    },
    "notifications": {
      "desc": "Notifications",
      "format": null,
      "ishidden": true,
      "isrequired": false,
      "isuiformatter": false,
      "name": "Notifications",
      "picklistname": null,
      "type": null,
      "weblinkname": null,
    },
    "number1": {
      "desc": "Number1",
      "format": null,
      "ishidden": true,
      "isrequired": false,
      "isuiformatter": false,
      "name": "Number1",
      "picklistname": null,
      "type": "java.lang.Float",
      "weblinkname": null,
    },
    "number2": {
      "desc": "Number2",
      "format": null,
      "ishidden": true,
      "isrequired": false,
      "isuiformatter": false,
      "name": "Number2",
      "picklistname": null,
      "type": "java.lang.Float",
      "weblinkname": null,
    },
    "numberofduplicates": {
      "desc": "Number Of Duplicates",
      "format": null,
      "ishidden": true,
      "isrequired": false,
      "isuiformatter": false,
      "name": "Number Of Duplicates",
      "picklistname": null,
      "type": null,
      "weblinkname": null,
    },
    "objectcondition": {
      "desc": "Object Condition",
      "format": null,
      "ishidden": true,
      "isrequired": false,
      "isuiformatter": false,
      "name": "Object Condition",
      "picklistname": null,
      "type": null,
      "weblinkname": null,
    },
    "ocr": {
      "desc": "Ocr",
      "format": null,
      "ishidden": true,
      "isrequired": false,
      "isuiformatter": false,
      "name": "Ocr",
      "picklistname": null,
      "type": null,
      "weblinkname": null,
    },
    "otheridentifiers": {
      "desc": "Other Identifiers",
      "format": null,
      "ishidden": true,
      "isrequired": false,
      "isuiformatter": false,
      "name": "Other Identifiers",
      "picklistname": null,
      "type": "OneToMany",
      "weblinkname": null,
    },
    "paleocontext": {
      "desc": "Paleo Context",
      "format": null,
      "ishidden": true,
      "isrequired": false,
      "isuiformatter": false,
      "name": "Paleo Context",
      "picklistname": null,
      "type": "ManyToOne",
      "weblinkname": null,
    },
    "preparations": {
      "desc": "Preparations",
      "format": null,
      "ishidden": false,
      "isrequired": false,
      "isuiformatter": false,
      "name": "Preparations",
      "picklistname": null,
      "type": "OneToMany",
      "weblinkname": null,
    },
    "projectnumber": {
      "desc": "Project Number",
      "format": null,
      "ishidden": false,
      "isrequired": false,
      "isuiformatter": false,
      "name": "Project Number",
      "picklistname": null,
      "type": null,
      "weblinkname": null,
    },
    "projects": {
      "desc": "Projects",
      "format": null,
      "ishidden": true,
      "isrequired": false,
      "isuiformatter": false,
      "name": "Projects",
      "picklistname": null,
      "type": null,
      "weblinkname": null,
    },
    "remarks": {
      "desc": "Remarks",
      "format": null,
      "ishidden": false,
      "isrequired": false,
      "isuiformatter": false,
      "name": "Remarks",
      "picklistname": null,
      "type": "text",
      "weblinkname": null,
    },
    "reservedinteger3": {
      "desc": "Reserved Integer3",
      "format": null,
      "ishidden": true,
      "isrequired": false,
      "isuiformatter": false,
      "name": "Reserved Integer3",
      "picklistname": null,
      "type": null,
      "weblinkname": null,
    },
    "reservedinteger4": {
      "desc": "Reserved Integer4",
      "format": null,
      "ishidden": true,
      "isrequired": false,
      "isuiformatter": false,
      "name": "Reserved Integer4",
      "picklistname": null,
      "type": null,
      "weblinkname": null,
    },
    "reservedtext": {
      "desc": "Reserved Text",
      "format": null,
      "ishidden": false,
      "isrequired": false,
      "isuiformatter": false,
      "name": "CT Scan",
      "picklistname": null,
      "type": null,
      "weblinkname": "CTScan",
    },
    "reservedtext2": {
      "desc": "Reserved Text2",
      "format": null,
      "ishidden": false,
      "isrequired": false,
      "isuiformatter": false,
      "name": "Reserved Text2",
      "picklistname": null,
      "type": null,
      "weblinkname": "Specify7",
    },
    "reservedtext3": {
      "desc": "Reserved Text3",
      "format": null,
      "ishidden": true,
      "isrequired": false,
      "isuiformatter": false,
      "name": "Reserved Text3",
      "picklistname": null,
      "type": null,
      "weblinkname": null,
    },
    "restrictions": {
      "desc": "Restrictions",
      "format": null,
      "ishidden": true,
      "isrequired": false,
      "isuiformatter": false,
      "name": "Restrictions",
      "picklistname": null,
      "type": null,
      "weblinkname": null,
    },
    "rightsiderels": {
      "desc": "Right Side Rels",
      "format": null,
      "ishidden": false,
      "isrequired": false,
      "isuiformatter": false,
      "name": "Right Side Rels",
      "picklistname": null,
      "type": "OneToMany",
      "weblinkname": null,
    },
    "sgrstatus": {
      "desc": "Sgr Status",
      "format": null,
      "ishidden": true,
      "isrequired": false,
      "isuiformatter": false,
      "name": "Sgr Status",
      "picklistname": null,
      "type": null,
      "weblinkname": null,
    },
    "text1": {
      "desc": "Phenology",
      "format": null,
      "ishidden": true,
      "isrequired": false,
      "isuiformatter": false,
      "name": "Phenology",
      "picklistname": "Phenology",
      "type": "java.lang.String",
      "weblinkname": null,
    },
    "text2": {
      "desc": "Text2",
      "format": null,
      "ishidden": true,
      "isrequired": false,
      "isuiformatter": false,
      "name": "Inventory",
      "picklistname": null,
      "type": "java.lang.String",
      "weblinkname": null,
    },
    "text3": {
      "desc": "Text3",
      "format": null,
      "ishidden": true,
      "isrequired": false,
      "isuiformatter": false,
      "name": "Text3",
      "picklistname": null,
      "type": null,
      "weblinkname": null,
    },
    "text4": {
      "desc": "Text4",
      "format": null,
      "ishidden": true,
      "isrequired": false,
      "isuiformatter": false,
      "name": "text4",
      "picklistname": null,
      "type": null,
      "weblinkname": null,
    },
    "text5": {
      "desc": "Text5",
      "format": null,
      "ishidden": true,
      "isrequired": false,
      "isuiformatter": false,
      "name": "text5",
      "picklistname": null,
      "type": null,
      "weblinkname": null,
    },
    "text6": {
      "desc": "Text6",
      "format": null,
      "ishidden": true,
      "isrequired": false,
      "isuiformatter": false,
      "name": "text6",
      "picklistname": null,
      "type": null,
      "weblinkname": null,
    },
    "text7": {
      "desc": "Text7",
      "format": null,
      "ishidden": true,
      "isrequired": false,
      "isuiformatter": false,
      "name": "text7",
      "picklistname": null,
      "type": null,
      "weblinkname": null,
    },
    "text8": {
      "desc": "Text8",
      "format": null,
      "ishidden": true,
      "isrequired": false,
      "isuiformatter": false,
      "name": "text8",
      "picklistname": null,
      "type": null,
      "weblinkname": null,
    },
    "timestampcreated": {
      "desc": "Timestamp Created",
      "format": null,
      "ishidden": true,
      "isrequired": false,
      "isuiformatter": false,
      "name": "Timestamp Created",
      "picklistname": null,
      "type": "java.sql.Timestamp",
      "weblinkname": null,
    },
    "timestampmodified": {
      "desc": "Modified Date",
      "format": null,
      "ishidden": false,
      "isrequired": false,
      "isuiformatter": false,
      "name": "Date Edited",
      "picklistname": null,
      "type": "java.sql.Timestamp",
      "weblinkname": null,
    },
    "totalvalue": {
      "desc": "Total Value",
      "format": null,
      "ishidden": true,
      "isrequired": false,
      "isuiformatter": false,
      "name": "Total Value",
      "picklistname": null,
      "type": null,
      "weblinkname": null,
    },
    "treatmentevents": {
      "desc": "Treatment Events",
      "format": null,
      "ishidden": true,
      "isrequired": false,
      "isuiformatter": false,
      "name": "Treatment Events",
      "picklistname": null,
      "type": null,
      "weblinkname": null,
    },
    "uniqueidentifier": {
      "desc": "Unique Identifier",
      "format": null,
      "ishidden": true,
      "isrequired": false,
      "isuiformatter": false,
      "name": "Unique Identifier",
      "picklistname": null,
      "type": null,
      "weblinkname": null,
    },
    "version": {
      "desc": "Version",
      "format": null,
      "ishidden": true,
      "isrequired": false,
      "isuiformatter": false,
      "name": "Version",
      "picklistname": null,
      "type": null,
      "weblinkname": null,
    },
    "visibility": {
      "desc": "Visibility",
      "format": null,
      "ishidden": true,
      "isrequired": false,
      "isuiformatter": false,
      "name": "Visibility",
      "picklistname": null,
      "type": "java.lang.Integer",
      "weblinkname": null,
    },
    "visibilitysetby": {
      "desc": "Visibility Set By",
      "format": null,
      "ishidden": true,
      "isrequired": false,
      "isuiformatter": false,
      "name": "Visibility Set By",
      "picklistname": null,
      "type": "java.lang.String",
      "weblinkname": null,
    },
    "voucherrelationships": {
      "desc": "Voucher Relationships",
      "format": null,
      "ishidden": false,
      "isrequired": false,
      "isuiformatter": false,
      "name": "Voucher Relationships",
      "picklistname": null,
      "type": null,
      "weblinkname": null,
    },
    "yesno1": {
      "desc": "Yes No1",
      "format": null,
      "ishidden": true,
      "isrequired": false,
      "isuiformatter": false,
      "name": "Yes No1",
      "picklistname": null,
      "type": "java.lang.Boolean",
      "weblinkname": null,
    },
    "yesno2": {
      "desc": "Yes No2",
      "format": null,
      "ishidden": true,
      "isrequired": false,
      "isuiformatter": false,
      "name": "Yes No2",
      "picklistname": null,
      "type": "java.lang.Boolean",
      "weblinkname": null,
    },
    "yesno3": {
      "desc": "Yes No3",
      "format": null,
      "ishidden": true,
      "isrequired": false,
      "isuiformatter": false,
      "name": "Yes No3",
      "picklistname": null,
      "type": null,
      "weblinkname": null,
    },
    "yesno4": {
      "desc": "Yes No4",
      "format": null,
      "ishidden": true,
      "isrequired": false,
      "isuiformatter": false,
      "name": "Yes No4",
      "picklistname": null,
      "type": null,
      "weblinkname": null,
    },
    "yesno5": {
      "desc": "Yes No5",
      "format": null,
      "ishidden": true,
      "isrequired": false,
      "isuiformatter": false,
      "name": "Yes No5",
      "picklistname": null,
      "type": null,
      "weblinkname": null,
    },
    "yesno6": {
      "desc": "Yes No6",
      "format": null,
      "ishidden": true,
      "isrequired": false,
      "isuiformatter": false,
      "name": "Yes No6",
      "picklistname": null,
      "type": null,
      "weblinkname": null,
    },
  },
  "name": "Collection Object",
  "picklistname": null,
  "type": null,
}
`;

exports[`relationships are loaded 1`] = `
[
  "[relationship CollectionObject.accession]",
  "[relationship CollectionObject.agent1]",
  "[relationship CollectionObject.appraisal]",
  "[relationship CollectionObject.cataloger]",
  "[relationship CollectionObject.cojo]",
  "[relationship CollectionObject.collectionObjectAttribute]",
  "[relationship CollectionObject.collection]",
  "[relationship CollectionObject.collectionObjectAttachments]",
  "[relationship CollectionObject.collectionObjectAttrs]",
  "[relationship CollectionObject.collectionObjectCitations]",
  "[relationship CollectionObject.collectionObjectProperties]",
  "[relationship CollectionObject.collectionObjectType]",
  "[relationship CollectionObject.conservDescriptions]",
  "[relationship CollectionObject.container]",
  "[relationship CollectionObject.containerOwner]",
  "[relationship CollectionObject.createdByAgent]",
  "[relationship CollectionObject.currentDetermination]",
  "[relationship CollectionObject.determinations]",
  "[relationship CollectionObject.dnaSequences]",
  "[relationship CollectionObject.modifiedByAgent]",
  "[relationship CollectionObject.embargoAuthority]",
  "[relationship CollectionObject.exsiccataItems]",
  "[relationship CollectionObject.collectingEvent]",
  "[relationship CollectionObject.fieldNotebookPage]",
  "[relationship CollectionObject.inventorizedBy]",
  "[relationship CollectionObject.leftSideRels]",
  "[relationship CollectionObject.otherIdentifiers]",
  "[relationship CollectionObject.paleoContext]",
  "[relationship CollectionObject.preparations]",
  "[relationship CollectionObject.projects]",
  "[relationship CollectionObject.rightSideRels]",
  "[relationship CollectionObject.treatmentEvents]",
  "[relationship CollectionObject.visibilitySetBy]",
  "[relationship CollectionObject.voucherRelationships]",
]
`;

exports[`tableScoping 1`] = `
{
  "Accession": "division",
  "AccessionAgent": "accession > division",
  "AccessionAttachment": "accession > division",
  "AccessionAuthorization": "accession > division",
  "AccessionCitation": "accession > division",
  "Address": "agent > division",
  "AddressOfRecord": undefined,
  "Agent": "division",
  "AgentAttachment": "agent > division",
  "AgentGeography": "agent > division",
  "AgentIdentifier": "agent > division",
  "AgentSpecialty": "agent > division",
  "AgentVariant": "agent > division",
  "Appraisal": undefined,
  "Attachment": undefined,
  "AttachmentImageAttribute": undefined,
  "AttachmentMetadata": undefined,
  "AttachmentTag": undefined,
  "AttributeDef": "discipline",
  "Author": undefined,
  "AutoNumberingScheme": undefined,
  "Borrow": undefined,
  "BorrowAgent": undefined,
  "BorrowAttachment": undefined,
  "BorrowMaterial": undefined,
  "BorrowReturnMaterial": undefined,
  "CollectingEvent": "discipline",
  "CollectingEventAttachment": "collectingEvent > discipline",
  "CollectingEventAttr": "collectingEvent > discipline",
  "CollectingEventAttribute": "discipline",
  "CollectingEventAuthorization": "collectingEvent > discipline",
  "CollectingTrip": "discipline",
  "CollectingTripAttachment": "collectingTrip > discipline",
  "CollectingTripAttribute": "discipline",
  "CollectingTripAuthorization": "collectingTrip > discipline",
  "Collection": "discipline",
  "CollectionObject": "collection",
  "CollectionObjectAttachment": "collectionObject",
  "CollectionObjectAttr": "collectionObject",
  "CollectionObjectAttribute": undefined,
  "CollectionObjectCitation": "collectionObject",
  "CollectionObjectGroup": "collection",
  "CollectionObjectGroupJoin": "parentCog > collection",
  "CollectionObjectGroupType": "collection",
  "CollectionObjectProperty": "collectionObject",
  "CollectionObjectType": "collection",
  "CollectionRelType": undefined,
  "CollectionRelationship": undefined,
  "Collector": "division",
  "CommonNameTx": "taxon > definition > discipline",
  "CommonNameTxCitation": "commonNameTx > taxon > definition > discipline",
  "ConservDescription": "collectionObject",
  "ConservDescriptionAttachment": "conservDescription > collectionObject",
  "ConservEvent": "conservDescription > collectionObject",
  "ConservEventAttachment": "conservEvent > conservDescription > collectionObject",
  "Container": undefined,
  "DNAPrimer": undefined,
  "DNASequence": "collectionObject",
  "DNASequenceAttachment": "dnaSequence > collectionObject",
  "DNASequencingRun": "dnaSequence > collectionObject",
  "DNASequencingRunAttachment": "dnaSequencingRun > dnaSequence > collectionObject",
  "DNASequencingRunCitation": "sequencingRun > dnaSequence > collectionObject",
  "DataType": undefined,
  "Deaccession": undefined,
  "DeaccessionAgent": undefined,
  "DeaccessionAttachment": undefined,
  "Determination": "collectionObject",
  "DeterminationCitation": "determination > collectionObject",
  "Determiner": "determination > collectionObject",
  "Discipline": "division",
  "Disposal": undefined,
  "DisposalAgent": undefined,
  "DisposalAttachment": undefined,
  "DisposalPreparation": undefined,
  "Division": undefined,
  "ExchangeIn": "division",
  "ExchangeInAttachment": "exchangeIn > division",
  "ExchangeInPrep": "discipline",
  "ExchangeOut": "division",
  "ExchangeOutAttachment": "exchangeOut > division",
  "ExchangeOutPrep": "discipline",
  "Exsiccata": undefined,
  "ExsiccataItem": "collectionObject",
  "Extractor": "dnaSequence > collectionObject",
  "FieldNotebook": "collection",
  "FieldNotebookAttachment": "fieldNotebook > collection",
  "FieldNotebookPage": "discipline",
  "FieldNotebookPageAttachment": "fieldNotebookPage > discipline",
  "FieldNotebookPageSet": "discipline",
  "FieldNotebookPageSetAttachment": "fieldNotebookPageSet > discipline",
  "FundingAgent": "division",
  "GeoCoordDetail": undefined,
  "Geography": "definition > discipline",
  "GeographyTreeDef": "discipline",
  "GeographyTreeDefItem": "treeDef > discipline",
  "GeologicTimePeriod": "definition > discipline",
  "GeologicTimePeriodTreeDef": "discipline",
  "GeologicTimePeriodTreeDefItem": "treeDef > discipline",
  "Gift": "discipline",
  "GiftAgent": "discipline",
  "GiftAttachment": "gift > discipline",
  "GiftPreparation": "discipline",
  "GroupPerson": "division",
  "InfoRequest": undefined,
  "Institution": undefined,
  "InstitutionNetwork": undefined,
  "Journal": undefined,
  "LatLonPolygon": "locality > discipline",
  "LatLonPolygonPnt": "latLonPolygon > locality > discipline",
  "LibraryRole": undefined,
  "LibraryRolePolicy": undefined,
  "LithoStrat": "definition > discipline",
  "LithoStratTreeDef": "discipline",
  "LithoStratTreeDefItem": "treeDef > discipline",
  "Loan": "discipline",
  "LoanAgent": "discipline",
  "LoanAttachment": "loan > discipline",
  "LoanPreparation": "discipline",
  "LoanReturnPreparation": "discipline",
  "Locality": "discipline",
  "LocalityAttachment": "locality > discipline",
  "LocalityCitation": "discipline",
  "LocalityDetail": "locality > discipline",
  "LocalityNameAlias": "discipline",
  "LocalityUpdate": "collection",
  "LocalityUpdateRowResult": undefined,
  "MaterialSample": "preparation > collectionObject",
  "Message": undefined,
  "MorphBankView": undefined,
  "OtherIdentifier": "collectionObject",
  "PaleoContext": "discipline",
  "PcrPerson": "dnaSequence > collectionObject",
  "Permit": undefined,
  "PermitAttachment": undefined,
  "PickList": "collection",
  "PickListItem": "pickList > collection",
  "PrepType": "collection",
  "Preparation": "collectionObject",
  "PreparationAttachment": "preparation > collectionObject",
  "PreparationAttr": "preparation > collectionObject",
  "PreparationAttribute": undefined,
  "PreparationProperty": "preparation > collectionObject",
  "Project": undefined,
  "RecordSet": undefined,
  "RecordSetItem": undefined,
  "ReferenceWork": undefined,
  "ReferenceWorkAttachment": undefined,
  "RepositoryAgreement": "division",
  "RepositoryAgreementAttachment": "repositoryAgreement > division",
  "Role": "collection",
  "RolePolicy": "role > collection",
  "Shipment": "discipline",
  "SpAppResource": "spAppResourceDir > collection",
  "SpAppResourceData": "spAppResource > spAppResourceDir > collection",
  "SpAppResourceDir": "collection",
  "SpAuditLog": undefined,
  "SpAuditLogField": undefined,
  "SpExportSchema": "discipline",
  "SpExportSchemaItem": "spExportSchema > discipline",
  "SpExportSchemaItemMapping": "exportSchemaItem > spExportSchema > discipline",
  "SpExportSchemaMapping": undefined,
  "SpFieldValueDefault": undefined,
  "SpLocaleContainer": "discipline",
  "SpLocaleContainerItem": "container > discipline",
  "SpLocaleItemStr": undefined,
  "SpPermission": undefined,
  "SpPrincipal": undefined,
  "SpQuery": undefined,
  "SpQueryField": undefined,
  "SpReport": "appResource > spAppResourceDir > collection",
  "SpSymbiotaInstance": undefined,
  "SpTaskSemaphore": "collection",
  "SpVersion": undefined,
  "SpViewSetObj": "spAppResourceDir > collection",
  "SpVisualQuery": undefined,
  "Spattachmentdataset": "collection",
  "Spdataset": "collection",
  "SpecifyUser": undefined,
  "Spmerging": "collection",
  "Spuserexternalid": undefined,
  "Storage": undefined,
  "StorageAttachment": undefined,
  "StorageTreeDef": undefined,
  "StorageTreeDefItem": undefined,
  "Taxon": "definition > discipline",
  "TaxonAttachment": "taxon > definition > discipline",
  "TaxonAttribute": undefined,
  "TaxonCitation": "taxon > definition > discipline",
  "TaxonTreeDef": "discipline",
  "TaxonTreeDefItem": "treeDef > discipline",
  "TreatmentEvent": "collectionObject",
  "TreatmentEventAttachment": "treatmentEvent > collectionObject",
  "UniquenessRule": "discipline",
  "UniquenessRuleField": "uniquenessrule > discipline",
  "UserPolicy": "collection",
  "UserRole": "role > collection",
  "VoucherRelationship": "collectionObject",
  "Workbench": undefined,
  "WorkbenchDataItem": undefined,
  "WorkbenchRow": undefined,
  "WorkbenchRowExportedRelationship": undefined,
  "WorkbenchRowImage": undefined,
  "WorkbenchTemplate": undefined,
  "WorkbenchTemplateMappingItem": undefined,
}
`;
